you can use this MONGODB database

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGO_DB= "your mongo connection here"
+MONGO_DB=mongodb+srv://lesterarte:Us6u2pVVEM7ZMnXq@fulltimeforce.rztxln0.mongodb.net/fulltimeforce
 PORT= "your port here"
 JWT_SECRET="your JWT secret here"
 DEFAULT_LIMIT_PAGINATION="your count pagination here"
