--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 MONGO_DB=mongodb+srv://lesterarte:Us6u2pVVEM7ZMnXq@fulltimeforce.rztxln0.mongodb.net/fulltimeforce
-PORT= "your port here"
-JWT_SECRET="your JWT secret here"
-DEFAULT_LIMIT_PAGINATION="your count pagination here"
+PORT=4000
+JWT_SECRET=rtwertwertertTTT66
+DEFAULT_LIMIT_PAGINATION=10
